--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                 <li>
                     <a href="/About">
                         <span class="text-3" uk-icon="information-circle"></span>
-                        <span>درباره</span>
+                        <span>درباره ما</span>
                     </a>
                 </li>
                 <li>
