--- a/GhasreMobile/Views/Shared/Components/ShowProductsInView/ShowProductsInView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/ShowProductsInView/ShowProductsInView.cshtml
@@ -1,8 +1,21 @@
 ﻿@model IEnumerable<TblProduct>
-
-@foreach (var item in Model)
+@if (Model.Any())
 {
-    <li>
-        <partial name="_ProductBlock" model="item" />
-    </li>
+    <div class="product-slider gap-t uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider="">
+        <div class="title">
+            <a href="#" class="dot-container">
+                <img src="~/st/v/dot.svg" alt="" class="dot" />
+                <h3>محصولات مرتبط</h3>
+            </a>
+        </div>
+        <ul class="uk-slider-items">
+            @foreach (var item in Model)
+            {
+                <li>
+                    <partial name="_ProductBlock" model="item" />
+                </li>
+            }
+        </ul>
+        <ul class="navigation uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
+    </div>
 }
