--- a/GhasreMobile/Areas/Admin/Views/Order/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Order/Index.cshtml
@@ -235,6 +235,7 @@
         }
 
         function BtnSearch() {
+            $("#overlay").fadeIn(300);
             var OrderId = $("#SearchInputId").val();
             var TellNo = $("#SearchInputUserPhone").val();
             var StartDate = $("#startDate").val();
