--- a/GhasreMobile/Areas/Admin/Views/Order/Components/OrderInfo.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Order/Components/OrderInfo.cshtml
@@ -22,6 +22,10 @@
                 <span>@Model.Client.Name</span>
             </div>
             <div class="form-group col-md-4">
+                <label>شماره تماس:</label>
+                <span>@Model.Client.TellNo</span>
+            </div>
+            <div class="form-group col-md-4">
                 <label>تاریخ ثبت سفارش:</label>
                 <span>@Model.DateSubmited.AllToShamsi()</span>
             </div>
