--- a/GhasreMobile/Areas/User/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/User/Views/Shared/_Layout.cshtml
@@ -30,53 +30,7 @@
 </head>
 <body>
 
-    <!-- This is the off-canvas -->
-    <div id="offCanvas" uk-offcanvas="overlay: true;flip: true">
-        <div class="uk-offcanvas-bar col">
-
-            <img src="~/st/r/logo.jpg" width="92" height="92" class="uk-margin-auto" alt="" />
-
-            <ul>
-                <li>
-                    <a href="/">
-                        <span class="text-3" uk-icon="home"></span>
-                        <span>خانه</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="/Forum">
-                        <span class="text-3" uk-icon="chatbubbles"></span>
-                        <span>تالار گفتگو</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="/Contact">
-                        <span class="text-3" uk-icon="call"></span>
-                        <span>تماس با ما</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="/Affiliate">
-                        <span class="text-3" uk-icon="flag"></span>
-                        <span>شعب ما</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="/Blog">
-                        <span class="text-3" uk-icon="browsers"></span>
-                        <span>اخبار</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="/Gallery">
-                        <span class="text-3" uk-icon="image"></span>
-                        <span>گالری</span>
-                    </a>
-                </li>
-            </ul>
-
-        </div>
-    </div>
+    <partial name="_OffCanvas" />
 
     <div class="header">
         <div class="bottom">
@@ -91,6 +45,7 @@
                     <a href="/Affiliate">شعب ما</a>
                     <a href="/Blog">اخبار</a>
                     <a href="/Gallery">گالری</a>
+                    <a href="/Conditions">شرایط اقساطی</a>
                 </nav>
                 @if (User.Identity.IsAuthenticated)
                 {
