--- a/GhasreMobile/Views/Shared/Components/SpecialOfferViem/SpecialOfferViem.cshtml
+++ b/GhasreMobile/Views/Shared/Components/SpecialOfferViem/SpecialOfferViem.cshtml
@@ -2,5 +2,5 @@
 
 @if (Model.Product != null)
 {
-    <partial name="_ExpressProductBlock" model="Model" />
+    <div swap="@ViewData["swap"]"><partial name="_ExpressProductBlock" model="Model" /></div>
 }
