--- a/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
@@ -131,7 +131,7 @@
                             <label class="ml-5 p-0 col-md-2 uk-text-right justify-content-start">@item.Property.Name:</label>
                             <input id="PropetryNameId" name="PropertyId" type="hidden" value="@item.PropertyId" />
                             <input id="PropertyValue" name="Value" class="form-control form-control-sm col-md-3 col-9" value="@item.Value">
-                            <a onclick="DeleteProperty(@item.PropertyId)" class="text-danger col-2 mr-1" uk-icon="close-circle">
+                            <a onclick="DeleteProperty(@item.PropertyId,@item.ProductPropertyRelId)" class="text-danger col-2 mr-1" uk-icon="close-circle">
                             </a>
                         </div>
                     }
@@ -178,6 +178,7 @@
 
 
 @section Script{
+    <script src="~/js/BjaxLib.js"></script>
     <script src="~/js/bootstrap-tagsinput.js"></script>
     <script src="~/js/Auto_Formatting_Currency.js"></script>
     <style>
@@ -216,11 +217,11 @@
         function SetNewInputGallery() {
             $("#GalleryPanel").append(
                 `<div class="custom-file col-md-7 mt-3">
-                                           <input type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" name="GalleryFile" onchange="inputChanged(this)"/>
-                                           <label class="custom-file-label" data-browse="انتخاب">
-                                                انتخاب فایل
-                                           </label>
-                                         </div>`
+                                                           <input type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" name="GalleryFile" onchange="inputChanged(this)"/>
+                                                           <label class="custom-file-label" data-browse="انتخاب">
+                                                                انتخاب فایل
+                                                           </label>
+                                                         </div>`
             );
 
             //$("#GalleryPanel").append("<div><input type='file' accept='image/x-png,image/gif,image/jpeg' name='GalleryFile'/></div>");
@@ -292,8 +293,11 @@
             });
         }
 
-        function DeleteProperty(id) {
-            $("#PropertyInCreate-" + id).remove();
+        function DeleteProperty(id, mainId) {
+            var isDeleted = Bjax('/Admin/Product/DeleteProperty?id=', mainId, 'SP');
+            if (isDeleted) {
+                $("#PropertyInCreate-" + id).remove();
+            }
         }
 
         $(".PriceInput").change(function () {
