Select first colour

--- a/GhasreMobile/Views/Product/Index.cshtml
+++ b/GhasreMobile/Views/Product/Index.cshtml
@@ -200,32 +200,23 @@
         <div class="colours">
             <h4>رنگ بندی</h4>
             <ul class="grid uk-margin-small-top">
-                @foreach (var item in Model.TblColor.Where(i => i.Count > 0))
+
+                @{
+                    var colors = Model.TblColor.Where(i => i.Count > 0).ToList();
+                }
+
+                @foreach (var item in colors)
                 {
                     System.Drawing.Color col = System.Drawing.ColorTranslator.FromHtml(item.ColorCode);
                     bool isLight = col.R * 0.2126 + col.G * 0.7152 + col.B * 0.0722 > 255 / 2;
-                    if ((Model.TblColor.ToList().IndexOf(item)) == 0)
-                    {
-                        <li>
-                            <input type="hidden" name="ProductColorId" id="ProductColorId" value="@item.ColorId" />
-                            <div class="clr active" onclick="selectColour(this)">
-                                <span>@item.Name</span>
-                                <strong style="background-color: @item.ColorCode; @(isLight ? "border:1px solid #333;" : "border:1px solid #ddd;")"></strong>
-                                <input type="hidden" name="ColorId" value="@item.ColorId" />
-                            </div>
-                        </li>
-                    }
-                    else
-                    {
-                        <li>
-                            <input type="hidden" name="ProductColorId" id="ProductColorId" value="@item.ColorId" />
-                            <div class="clr" onclick="selectColour(this)">
-                                <span>@item.Name</span>
-                                <strong style="background-color: @item.ColorCode; @(isLight ? "border:1px solid #333;" : "border:1px solid #ddd;")"></strong>
-                                <input type="hidden" name="ColorId" value="@item.ColorId" />
-                            </div>
-                        </li>
-                    }
+                    <li>
+                        <input type="hidden" name="ProductColorId" id="ProductColorId" value="@item.ColorId" />
+                        <div class="clr @(colors.IndexOf(item)==0?"active":"")" onclick="selectColour(this)">
+                            <span>@item.Name</span>
+                            <strong style="background-color: @item.ColorCode; @(isLight ? "border:1px solid #333;" : "border:1px solid #ddd;")"></strong>
+                            <input type="hidden" name="ColorId" value="@item.ColorId" />
+                        </div>
+                    </li>
                 }
             </ul>
         </div>
