--- a/GhasreMobile/Areas/Admin/Views/OnlineOrder/Components/Info.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/OnlineOrder/Components/Info.cshtml
@@ -22,6 +22,10 @@
                 <span>@Model.Client.Name</span>
             </div>
             <div class="form-group col-md-6">
+                <label>نام کاربری:</label>
+                <span>@Model.Client.TellNo</span>
+            </div>
+            <div class="form-group col-md-6">
                 <label>تاریخ ثبت:</label>
                 <span>@Model.DateSubmited.Value.AllToShamsi()</span>
             </div>
