--- a/GhasreMobile/Areas/Admin/Views/Notification/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Notification/Components/Create.cshtml
@@ -17,13 +17,13 @@
         <div class="form-row mr-2 mt-3">
             <div class="form-group col-md-3">
                 <label>شماره تماس</label>
-                <input type="tel" class="form-control form-control-sm" placeholder="مثال:0914...." id="PhoneNumber" onchange="ShowUser()">
+                <input required type="tel" class="form-control form-control-sm" placeholder="مثال:0914...." id="PhoneNumber" onchange="ShowUser()">
 
             </div>
             <div class="mt-md-4 pt-md-2 mr-md-3 d-none" id="UserName">
                 <span id="Status" class="text-success" uk-icon="checkmark-circle-outline"></span>
                 <label id="UserNameLabel"></label>
-                <input type="hidden" name="UserId" id="UserId" />
+                <input type="hidden" name="UserId" id="UserId" required />
             </div>
         </div>
         <div class="form-group col-md-7 mt-2">
@@ -48,19 +48,20 @@
     function ShowUser() {
         var data = $("#PhoneNumber").val();
         $.get("/Admin/Notification/ReturnUser?TelNo=" + data, function (result) {
+            alert(result);
             if (result == "0") {
                 document.getElementById("UserName").classList.remove("d-none");
                 $("#UserId").val("");
-                $("#Status").removeAttr('uk-icon');
+                $("#Status").addClass('fade');
                 $("#UserNameLabel").html("این شماره تماس وجود ندارد");
-                $("#Status").Attr("uk-icon", "close-circle");
-                $("#SubmitSendNoti").prop("disabled", true);
+                $("#SubmitSendNoti").prop("disabled", "disabled");
             }
             if (result != "0") {
                 document.getElementById("UserName").classList.remove("d-none");
-                $("#Status").addClass('show');
+                $("#UserNameLabel").html("");
+                $("#Status").removeClass('fade');
                 $("#UserId").val(result);
-                $("#SubmitSendNoti").prop("disabled", false);
+                $("#SubmitSendNoti").prop("disabled", "");
             }
         });
 
